--- a/.env
+++ b/.env
@@ -1,5 +1,8 @@
 
-DATABASE_URL="mysql://root:@localhost:3306/new-accounting-gautam"
+
+
+DATABASE_URL="mysql://root:TVkVoRAWNtKcNEFOPMbrsbtirnByioiR@trolley.proxy.rlwy.net:25833/railway"
+
 
 
 # DATABASE_URL="mysql://root:fHdlCoFPZmzEzkqpXUDYNzBDWnhCtXwI@interchange.proxy.rlwy.net:46162/railway"
@@ -9,3 +12,5 @@ CLOUDINARY_CLOUD_NAME=dw48hcxi5
 CLOUDINARY_API_KEY=689363246125766
 CLOUDINARY_API_SECRET=JRLPyuJsIAxmsmhmRrSpUTvQn9c
 PORT = 8080
+
+
