--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
     "multer-storage-cloudinary": "^4.0.0",
+    "openapi-types": "^12.1.3",
     "streamifier": "^0.1.1",
     "swagger-autogen": "^2.23.7",
     "swagger-jsdoc": "^6.2.8",
