--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-# DATABASE_URL="mysql://root:@localhost:3306/new-accounting-gautam"
+DATABASE_URL="mysql://root:@localhost:3306/new-accounting-gautam"
 
-DATABASE_URL="mysql://root:TVkVoRAWNtKcNEFOPMbrsbtirnByioiR@trolley.proxy.rlwy.net:25833/railway"
+# DATABASE_URL="mysql://root:TVkVoRAWNtKcNEFOPMbrsbtirnByioiR@trolley.proxy.rlwy.net:25833/railway"
 
 JWT_SECRET = esfjkdsfdskljj;sdfj;kdsf
 CLOUDINARY_CLOUD_NAME=dw48hcxi5
