--- a/.env
+++ b/.env
@@ -1,4 +1,6 @@
-# DATABASE_URL="mysql://root:@localhost:3306/accounting-db"
+
+
+# DATABASE_URL="mysql://root:TVkVoRAWNtKcNEFOPMbrsbtirnByioiR@trolley.proxy.rlwy.net:25833/railway"
 
 DATABASE_URL="mysql://root:TVkVoRAWNtKcNEFOPMbrsbtirnByioiR@trolley.proxy.rlwy.net:25833/railway"
 
@@ -7,7 +9,3 @@ CLOUDINARY_CLOUD_NAME=dw48hcxi5
 CLOUDINARY_API_KEY=689363246125766
 CLOUDINARY_API_SECRET=JRLPyuJsIAxmsmhmRrSpUTvQn9c
 PORT = 8080 
-
-
-
-
